--- a/match.html
+++ b/match.html
@@ -582,8 +582,8 @@
                         // Prepare data for API
                         const dataToSend = {
                             teacher_id: teacherId,
-                            teacher_name: teacherName, // Changed key to match Python convention
-                            teacher_email: teacherEmail, // Changed key to match Python convention
+                            name: teacherName, // Changed key to match Python convention
+                            email: teacherEmail, // Changed key to match Python convention
                             reason: "User clicked 'Send message' on matching page" // Default reason
                         };
 
